Complete matcher and scanner exercises