@@ -1,24 +1,19 @@
 package exercises;
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.Comparator;
-import java.util.regex.Pattern;
-import java.util.regex.Matcher;
-import java.util.regex.MatchResult;
-import java.util.Set;
-import java.util.Scanner;
-import java.util.stream.Collectors;
-
-import org.junit.After;
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.util.Scanner;
+import java.util.Set;
+import java.util.regex.MatchResult;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 /**
@@ -40,9 +35,12 @@ public class G_MatcherScanner {
      * been loaded into the String variable SONNET, using the Matcher class, and
      * process the results using a Stream.
      */
-    @Test @Ignore
+    @Test
     public void g1_wordsWithApostrophes() {
-        Set<String> result = null; // TODO
+        Set<String> result = WORD_PAT.matcher(SONNET)
+                                .results()
+                                .map(MatchResult::group)
+                                .collect(Collectors.toSet());
 
         assertEquals(Set.of("Feed'st", "mak'st"), result);
     }
@@ -56,9 +54,12 @@ public class G_MatcherScanner {
      * Use the Scanner class to process the String variable SONNET, matching words as
      * described above using WORD_PAT.
      */
-    @Test @Ignore
+    @Test
     public void g2_wordsWithApostrophes() {
-        Set<String> result = null; // TODO
+        Set<String> result = new Scanner(SONNET)
+                .findAll(WORD_PAT)
+                .map(MatchResult::group)
+                .collect(Collectors.toSet());
 
         assertEquals(Set.of("Feed'st", "mak'st"), result);
     }
@@ -73,13 +74,15 @@ public class G_MatcherScanner {
      * the substring converted to upper case and surrounded by square brackets "[]".
      * Use the predefined pattern TRIGRAPH_PAT to match vowel trigraphs.
      */
-    @Test @Ignore
+    @Test
     public void g3_vowelTrigraphs() {
         final Pattern TRIGRAPH_PAT = Pattern.compile("[aeiou]{3}", Pattern.CASE_INSENSITIVE);
-        String result = null; // TODO
+        String result = TRIGRAPH_PAT.matcher(SONNET)
+                                    .replaceAll(
+                                            matchResult -> "[" + matchResult.group().toUpperCase() + "]");
 
         assertTrue(result.contains("b[EAU]ty's"));
-        assertEquals(614, result.length());
+        assertEquals(628, result.length());
     }
     // Hint:
     // <editor-fold defaultstate="collapsed">
@@ -96,9 +99,13 @@ public class G_MatcherScanner {
      * but the advantage of Scanner is that it operate on a file, an InputStream,
      * or a Channel, and all the input need not be loaded into memory.)
      */
-    @Test @Ignore
+    @Test
     public void g4_firstLongWhitespaceSeparatedToken() {
-        String result = null; // TODO
+        String result = new Scanner(SONNET)
+                .tokens()
+                .filter(word -> word.length() >= 10)
+                .findFirst()
+                .get();
 
         assertEquals("contracted", result);
     }
@@ -118,7 +125,7 @@ public class G_MatcherScanner {
      * an apostrophe, by matching a word boundary, one or more letters, an apostrophe,
      * two or more letters, and a word boundary. Matching is case insensitive.
      */
-    static final Pattern WORD_PAT = Pattern.compile("\\b[a-z]+'[a-z]{2,}\\b", Pattern.CASE_INSENSITIVE);
+    private static final Pattern WORD_PAT = Pattern.compile("\\b[a-z]+'[a-z]{2,}\\b", Pattern.CASE_INSENSITIVE);
 
     /**
      * The text of Shakespeare's first sonnet, in a string. Note, this string
@@ -128,7 +135,6 @@ public class G_MatcherScanner {
 
     @Before
     public void z_readFileIntoString() throws IOException {
-        SONNET = new String(Files.readAllBytes(Paths.get("SonnetI.txt")),
-                            StandardCharsets.UTF_8);
+        SONNET = Files.readString(Paths.get("SonnetI.txt"));
     }
 }
